fix sharing links on mobile

--- a/core/static/styles/pages/article.scss
+++ b/core/static/styles/pages/article.scss
@@ -114,6 +114,7 @@ h1 {
     right: 0;
     top: #{$spacing-1 - 5px};
     width: auto;
+    position: relative;
   }
 }
 
